--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js",
-    "dev:start": "nodemon --exec babel-node index.js"
+    "start": "npm run build:server && node ./build/index.js",
+    "dev:start": "nodemon --exec babel-node index.js",
+    "build:src": "babel src -d build/src && babel config -d build/config",
+    "build:index": "babel index.js -d build",
+    "build:server": "npm run build:src && npm run build:index"
   },
   "author": "Ilham Hanif Anjana",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -20,6 +24,7 @@
     "slugify": "^1.6.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
