--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build:server && node ./build/index.js",
+    "start": "node ./build/index.js",
     "dev:start": "nodemon --exec babel-node index.js",
     "build:src": "babel src -d build/src && babel config -d build/config",
     "build:index": "babel index.js -d build",
